2023-02-25  James D. Trotter  <james@simula.no>

        initial version

Copyright (C) 2023 James D. Trotter
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.